kubernetes/prod/autotrends-prod-flask-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autotrends-prod-flask-deployment
  labels:
    app: autotrends-prod-flask-app
    username: svv346
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autotrends-prod-flask-app
  template:
    metadata:
      labels:
        app: autotrends-prod-flask-app
    spec:
      containers:
        - name: autotrends-prod-flask-app
          imagePullPolicy: Always
          image: sreshaven/auto_trends_api:final
          ports:
          - name: http
            containerPort: 5000
