kubernetes/prod/autotrends-prod-wrk-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autotrends-prod-wrk-deployment
  labels:
    app: autotrends-prod-worker-app
    username: svv346
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: autotrends-prod-worker-app
  template:
    metadata:
      labels:
        app: autotrends-prod-worker-app
    spec:
      containers:
        - name: autotrends-prod-worker-app
          imagePullPolicy: Always
          image: sreshaven/worker_api:final
