kubernetes/prod/autotrends-prod-redis-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: autotrends-prod-redis-service
  labels:
    username: svv346
    env: prod
spec:
  type: ClusterIP
  selector:
    app: autotrends-prod-redis-app
  ports:
  - name: autotrends-prod-redis-app
    port: 6379
    targetPort: 6379
