kubernetes/prod/autotrends-prod-flask-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: autotrends-prod-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "otg.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: flaskprod-service-nodeport
              port:
                  number: 30195
